@@ -1,6 +1,6 @@
 package com.example.client;
 
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.concurrent.TimeUnit;
 
@@ -18,12 +18,7 @@ public class StringRedisClient {
     private final RedisScript<Boolean> redisScriptExists;
 
     public Optional<String> get(String key) {
-        return Optional.ofNullable(stringRedisTemplate.hasKey(key))
-                       .map(hasKey -> stringRedisTemplate.opsForValue().get(key));
-    }
-
-    public Boolean expire(String key, long seconds) {
-        return stringRedisTemplate.expire(key, seconds, TimeUnit.SECONDS);
+        return Optional.ofNullable(stringRedisTemplate.opsForValue().get(key));
     }
 
     public void set(String key, String value) {
@@ -36,6 +31,10 @@ public class StringRedisClient {
                            .set(key, value, seconds, TimeUnit.SECONDS);
     }
 
+    public Boolean expire(String key, long seconds) {
+        return stringRedisTemplate.expire(key, seconds, TimeUnit.SECONDS);
+    }
+
     public void delete(String key) {
         stringRedisTemplate.delete(key);
     }
@@ -45,14 +44,10 @@ public class StringRedisClient {
     }
 
     public Boolean checkAndSet(String key, String oldValue, String newValue) {
-        return stringRedisTemplate.execute(redisScriptCheckAndSet,
-                                           Collections.singletonList(key),
-                                           oldValue, newValue);
+        return stringRedisTemplate.execute(redisScriptCheckAndSet, List.of(key), oldValue, newValue);
     }
 
     public Boolean exists(String key, String value) {
-        return stringRedisTemplate.execute(redisScriptExists,
-                                           Collections.singletonList(key),
-                                           value);
+        return stringRedisTemplate.execute(redisScriptExists, List.of(key), value);
     }
 }
